initial test, ~40% of the performance was achieved